# Skyrim-Automod-Toolkit

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Directory.Build.props  README.md  SpookysAutomod.sln  doc-update-instructions.md  llm-guide.md  settings.example.json
.agents/skills/skyrim-papyrus/: skill.md
.agents/skills/skyrim-skse/: skill.md
.claude/skills/skyrim-archive/: skill.md
.claude/skills/skyrim-esp/: skill.md
dictionaries/: Dawnguard_english_chinese.xml  Dragonborn_english_chinese.xml  HearthFires_english_chinese.xml  README.agent-format.md  Update_english_chinese.xml  _ResourcePack_english_chinese.xml
dictionaries/agent-readable/: manifest.json
dictionaries/agent-readable/entries/: Dawnguard.entries.part-0001.jsonl  Dawnguard.entries.part-0002.jsonl  Dragonborn.entries.part-0001.jsonl  Dragonborn.entries.part-0003.jsonl  HearthFires.entries.part-0001.jsonl  Skyrim.entries.part-0004.jsonl  Skyrim.entries.part-0007.jsonl  Skyrim.entries.part-0014.jsonl  Update.entries.part-0001.jsonl  _ResourcePack.entries.part-0001.jsonl
dictionaries/agent-readable/records/: Dawnguard.records.part-0001.jsonl  Dawnguard.records.part-0002.jsonl  Dragonborn.records.part-0002.jsonl  HearthFires.records.part-0001.jsonl  Skyrim.records.part-0002.jsonl  Skyrim.records.part-0003.jsonl  Skyrim.records.part-0004.jsonl  Skyrim.records.part-0006.jsonl  Skyrim.records.part-0007.jsonl  Skyrim.records.part-0008.jsonl  Skyrim.records.part-0009.jsonl  Skyrim.records.part-0010.jsonl  Skyrim.records.part-0011.jsonl  Update.records.part-0001.jsonl  _ResourcePack.records.part-0001.jsonl
docs/: README.md  environment-troubleshooting.md  esp-translation.md  esp.md  human-name-translation.md  llm-guide.md  llm-init-prompt.md  local-ai-translation-plan.md  local-ai-translation-prompts-by-model.md  local-ai-translation-prompts.md  nif.md  papyrus.md  skse.md
docs/knowledge_base/: README.md
docs/knowledge_base/uesp/: Lore_%22Death%22_of_Morphotypical_Entities.md  Lore_%C2%A5R.md  Lore_1._The_Thrassian_Plague.md  Lore_101_Uses_for_Troll_Fat.md  Lore_16_Accords_of_Madness,_v._IX.md  Lore_16_Accords_of_Madness,_v._VI.md  Lore_16_Accords_of_Madness,_v._XII.md  Lore_16_Accords_of_Madness.md  Lore_2._Baron-Admiral_Bendu_Olo.md  Lore_2920,_Evening_Star_(v12).md  Lore_2920,_First_Seed_(v3).md  Lore_2920,_Frostfall_(v10).md  Lore_2920,_Hearth_Fire_(v9).md  Lore_2920,_Last_Seed_(v8).md  Lore_2920,_MidYear_(v6).md  Lore_2920,_Morning_Star_(v1).md  Lore_2920,_Rain%27s_Hand_(v4).md  Lore_2920,_Second_Seed_(v5).md  Lore_2920,_Sun%27s_Dawn_(v2).md  Lore_2920,_Sun%27s_Dusk_(v11).md  Lore_2920,_Sun%27s_Height_(v7).md  Lore_2920,_The_Last_Year_of_the_First_Era.md  Lore_2920__The_Last_Year_of_the_First_Era.md  Lore_2E_582.md  Lore_2nd_Era.md  Lore_2nd_Manifesto_of_Kinlord_Rilis_XII.md  Lore_3._The_All_Flags_Navy.md  Lore_36_Lessons_of_Vivec,_Sermon_1.md  Lore_36_Lessons_of_Vivec,_Sermon_10.md  (+22719 more)
skyrim-script-headers/: UIExtensions.psc
src/SpookysAutomod.Cli/: Program.cs  SpookysAutomod.Cli.csproj
src/SpookysAutomod.Dictionaries/: SpookysAutomod.Dictionaries.csproj
src/SpookysAutomod.Setup/: App.xaml  App.xaml.cs  SpookysAutomod.Setup.csproj
src/SpookysAutomod.TranslationStudio/: App.xaml  App.xaml.cs  SpookysAutomod.TranslationStudio.csproj
templates/skse/papyrus-native/: CMakeLists.txt
test-translation-data/: README.md  status-showcase_english_chinese.xml  status-showcase_english_chinese.xml.studio-cache.json
tests/SpookysAutomod.Tests/: SpookysAutomod.Tests.csproj
tools/nif-tool/: README.md  SKILL.md
(+99 files in other folders)
